2012-07-27  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>
	* Makefile.in (test-printf.os, test-strtod.os): New rules to depend on
	printf_dfp.os and strtod[32|64|128].os respectively.
	* strtod128.c (__DEC_MANT_DIG__, __DEC_MAX_EXP__, __DEC_MIN_EXP__):
	Define to _Decimal128 values.
	* tests/test-strtod.c: Added tests near __DEC*_MAX_EXP__ and
	__DEC*_MIN_EXP__.
	* strtod64.c (__DEC_MANT_DIG__, __DEC_MAX_EXP__, __DEC_MIN_EXP__):
	Define to _Decimal64 values.
	* sysdeps/powerpc/dfpu/numdigits.h (left_justify): Fix VSX case by
	replacing xxlxor with xxlor insn.
	(getexp): Replace stfwix with stfd to prevent erroneous sign extend.
	* sysdeps/soft-dfp/dpd/numdigits.h (getexp): Make return value
	congruent with hardware-dfp for NaN.
	* strtod32.c (__DEC_MANT_DIG__, __DEC_MAX_EXP__, __DEC_MIN_EXP__):
	Define to _Decimal32 values.
	(FUNCTION_L_INTERNAL): Add left_justify call if proposed exponent is
	sufficiently close to __DEC*_MAX_EXP__.  Add zero return if proposed
	exponent is smaller than __DEC*_MIN_EXP__.

2012-07-25  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>

	* Makefile.in (libdfp_c_tests): Added test-getexp.
	* tests/test-getexp.c: New test.
	* tests/test-decode.c (d64types): Added test for __DEC64_MAX__ and
	__DEC64_MIN__.
	* sysdeps/powerpc/dfpu/numdigits.h (getexpd[32|64|128]): Fixed in
	order to prevent erroneous sign extension due to using stfiwx.

2012-07-25  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>

	* sysdeps/powerpc/dfpu/numdigits.h: Cleaned up inline asm DEC_TYPE
	declarations.  Removed redundant macros.  Merged macros under similar
	guards.

2012-07-25  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>

	* sysdeps/powerpc/dfpu/numdigits.h (numdigits*): Fix inline asm to
	place result of drrnd[q] into DEC_TYPE instead of double.  Update
	copyright years to range.
	* tests/test-decode.c: Update copyright years to range.
	* tests/test-param.c: Likewise.
	* tests/test-printf.c: Likewise.
	* tests/test-numdigits.c: Likewise.
	* tests/test-istream.cpp: Likewise.